--- a/index.html
+++ b/index.html
@@ -11,19 +11,37 @@
 </head>
 <body>
 
+  <main class="card-container">
+    <div class="card-information">
+      <h1 class="card-slogan">Get insights that help your business grow.</h1>
+      <p class="card-text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.</p>
+    </div>
+
+    <ul>
+     <li class="info">
+      <p class="counter">10k+</p>
+      <span class="counter-type">companies</span>
+     </li>
+     <li class="info">
+      <p class="counter">314+</p>
+      <span class="counter-type">templates</span>
+     </li>
+     <li class="info">
+      <p class="counter">12m</p>
+      <span class="counter-type">queries</span>
+     </li>
+    </ul>
+
+    <div class="card-image">
+      <img src="./images/image-header-desktop.jpg" alt="pessoas trabalhando" class="image-card">
+    </div>
+  </main>
   
   
 </body>
 </html>
 
-<!-- Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries -->
 
   <!-- <div class="pai">
     <div class="filha-1">
