--- a/index.html
+++ b/index.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/variables.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/responsive.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Outfit:wght@300;400;600&family=Red+Hat+Display:wght@500;700;900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&family=Outfit:wght@300;400;600&family=Red+Hat+Display:wght@500;700;900&display=swap"
+    rel="stylesheet">
+
   <title>Frontend Mentor | Stats preview card component</title>
 
 </head>
+
 <body>
 
   <main class="card-container">
     <div class="card-information">
-      <h1 class="card-slogan">Get insights that help your business grow.</h1>
-      <p class="card-text">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      <h1 class="card-slogan">Get <span class="slogan">insights</span>  that help your business grow.</h1>
+      <p class="card-text">Discover the benefits of data analytics and make better decisions regarding revenue, customer
         experience, and overall efficiency.</p>
+
+        <ul class="card-numbers">
+          <li class="info">
+            <p class="counter">10k+</p>
+            <span class="counter-type">companies</span>
+          </li>
+          <li class="info">
+            <p class="counter">314</p>
+            <span class="counter-type">templates</span>
+          </li>
+          <li class="info">
+            <p class="counter">12M+</p>
+            <span class="counter-type">queries</span>
+          </li>
+        </ul>
     </div>
 
-    <ul>
-     <li class="info">
-      <p class="counter">10k+</p>
-      <span class="counter-type">companies</span>
-     </li>
-     <li class="info">
-      <p class="counter">314+</p>
-      <span class="counter-type">templates</span>
-     </li>
-     <li class="info">
-      <p class="counter">12m</p>
-      <span class="counter-type">queries</span>
-     </li>
-    </ul>
+   
 
     <div class="card-image">
       <img src="./images/image-header-desktop.jpg" alt="pessoas trabalhando" class="image-card">
     </div>
   </main>
-  
-  
-</body>
-</html>
-
 
   <!-- <div class="pai">
     <div class="filha-1">
@@ -51,3 +62,11 @@
       2
     </div>
   </div> -->
+
+
+</body>
+
+</html>
+
+
+<!--  -->
