fazendo overay na foto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    
 
     <div class="card-image">
-      <img src="./images/image-header-desktop.jpg" alt="pessoas trabalhando" class="image-card">
+      <div class="overlay"></div>
     </div>
   </main>
 
